--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,4 +1,4 @@
-
+ 
 .about_section{
  background-color: #ffffff;
     height: 43rem;
@@ -16,7 +16,8 @@
    position: absolute;
    padding-top: -1rem;
    font-weight: 500;
-   
+ 
+  
     
 }
 .about__container{
@@ -52,13 +53,21 @@
     padding: 1rem 1rem;
     width: 10rem;
     margin-top: -1rem;
+    margin-right:-1rem ;
+}
   
+   .about__info {
+    
+    margin-right: 20rem;
    
     
-}
+   }
+    
+
 .about__data{
     margin-left: 4rem;
     margin-top: -3rem;
+    
 
 }
 .about__title{
@@ -79,8 +88,9 @@
    margin-left: 3rem;}
 
    .about_description{
-    padding-right: 10.1rem;
-    width: 42rem;
+    margin-right: 10.1rem;
+    width: 30rem;
+
    
    }
    .button1 {
@@ -96,43 +106,52 @@
     padding-top:1rem ;
     margin-top: 0.1rem;
        }
-
+       @media screen and (max-width:1015px){
+        .about_img{
+            margin-left: -2rem;
+        }
+       }
   
-   @media screen and (max-width:992px) {
+   @media screen and (max-width:768px) {
     .about__container{
         grid-template-columns: 1fr;
         row-gap:2.5rem;
-        display: block;
-        background-color:var(--body-color);
+        display: flex;
+
     }
     .about_img{
         width: 300px;
         height: 300px;
-        margin-left: 5rem;
+        margin-left: 1rem;
         margin-top: 1rem;
         padding-top: -1rem;
     }
     .about__box{
         padding: 0.75rem 0.5rem;
+        
     }
     .about__data{
         text-align: center;
+      
     }
     .about__info{
         justify-content: center;
-        margin-left: -20rem;
+        margin-left: -6rem;
     }
     .section__subtitle{
-        padding-top: 2rem;
-        margin-left: 32.7rem;
+    width: 50rem;
+
+    
+
     }
     .seaction__title{
-        margin-top: -5.4rem;
-       margin-left: -14rem;
+        margin-top: -9rem;
+       margin-left: 1rem;
     }
     .about__box{
      height: 8rem;
      margin-top: 2rem;
+     margin-left: 1rem;
     
     }
    
@@ -153,8 +172,8 @@
 
     }
     .about_description{
-        margin-left: -13rem;
-        width: 60rem;
+        margin-left:-4rem;
+        width: 30rem;
        
     }
     .button1{
@@ -164,4 +183,23 @@
         
         
     }
+   } 
+   @media screen and (max-width:992px){
+    .about_img{
+        margin-left: -10rem;
+        height: 24rem;
+        width: 24rem;
+    }
    }
+   @media screen and (max-width:864px){
+.section__subtitle{
+  margin-left: 46rem;
+}
+
+        
+    }
+    @media screen and (max-width:768px) {
+        .seaction__title{
+            margin-right: 42rem;
+        }
+    }
